tests/specs/ecosystem/wok/helmet/1_0_0.test
wok/helmet/1.0.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
 --> /src/libs/types.ts:5:14
  | 
5 | export const ChartRepoReleaseSchema = FlexObject({
  |              ^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/libs/types.ts:14:14
   | 
14 | export const ChartRepoIndexSchema = FlexObject({
   |              ^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/libs/types.ts:71:14
   | 
71 | export const ChartMetadataSchema = FlexObject({
   |              ^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/libs/types.ts:113:14
    | 
113 | export const KubectlClientVersionCmdOutputSchema = FlexObject({
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/libs/types.ts:119:14
    | 
119 | export const KubectlServerVersionCmdOutputSchema = FlexObject({
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/libs/iac_utils.ts:338:14
    | 
338 | export const HelmLsResultSchema = Type.Array(Type.Object({
    |              ^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


